simulation-wasm/error2.log
    Checking simulation-wasm v0.1.0 (/Users/max/Rust/Battlesim2/simulation-wasm)
warning: unused import: `SimulationResult`
 --> src/lib.rs:8:41
  |
8 | use crate::model::{Creature, Encounter, SimulationResult};
  |                                         ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `serde_wasm_bindgen::Serializer: serde::Serializer` is not satisfied
   --> src/lib.rs:20:23
    |
20  |     results.serialize(serializer).unwrap()
    |             --------- ^^^^^^^^^^ the trait `enums::_::_serde::Serializer` is not implemented for `serde_wasm_bindgen::Serializer`
    |             |
    |             required by a bound introduced by this call
    |
    = note: the trait bound `serde_wasm_bindgen::Serializer: enums::_::_serde::Serializer` is not satisfied
note: required by a bound in `enums::_::_serde::Serialize::serialize`
   --> /Users/max/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/ser/mod.rs:267:12
    |
265 |     fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    |        --------- required by a bound in this associated function
266 |     where
267 |         S: Serializer;
    |            ^^^^^^^^^^ required by this bound in `Serialize::serialize`
help: consider borrowing here
    |
20  |     results.serialize(&serializer).unwrap()
    |                       +

warning: unused variable: `allies`
   --> src/simulation.rs:275:32
    |
275 | fn get_actions(c: &Combattant, allies: &[Combattant], enemies: &[Combattant]) -> Vec<Action> {
    |                                ^^^^^^ help: if this is intentional, prefix it with an underscore: `_allies`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `enemies`
   --> src/simulation.rs:275:55
    |
275 | fn get_actions(c: &Combattant, allies: &[Combattant], enemies: &[Combattant]) -> Vec<Action> {
    |                                                       ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_enemies`

warning: unused variable: `a`
   --> src/simulation.rs:371:21
    |
371 |         Action::Atk(a) => {
    |                     ^ help: if this is intentional, prefix it with an underscore: `_a`

warning: unused variable: `a`
   --> src/simulation.rs:393:22
    |
393 |         Action::Heal(a) => {
    |                      ^ help: if this is intentional, prefix it with an underscore: `_a`

warning: unused variable: `c`
   --> src/simulation.rs:366:16
    |
366 | fn get_targets(c: &Combattant, action: &Action, allies: &[Combattant], enemies: &[Combattant]) -> Vec<(bool, usize)> {
    |                ^ help: if this is intentional, prefix it with an underscore: `_c`

For more information about this error, try `rustc --explain E0277`.
warning: `simulation-wasm` (lib) generated 6 warnings
error: could not compile `simulation-wasm` (lib) due to 1 previous error; 6 warnings emitted
